# object-detection-neural-network

./: .gitignore  CIFAR-10_Image_Classifier-STARTER.ipynb  pyproject.toml
