[tool.poetry]
name = "object-detection-network"
version = "0.1.0"
description = ""
authors = ["kit <kit@humn.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.1"
numpy = "^1.22.0"
torchvision = "^0.11.2"
jupyterlab = "^3.2.5"
black = "^21.12b0"
nb-black = "^1.0.7"
tqdm = "^4.62.3"
matplotlib = "^3.5.1"
ipywidgets = "^7.6.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
